jdk1.4でコンパイル出来なかったので修正。 Integer.valueOf(int)って1.5からだったのね・・・。
git-svn-id: https://www.seasar.org/svn/sandbox/fisshplate/trunk@58 c159f9c0-7f7c-4dca-964d-717b2124a8cb